--- a/sass/components/_image-slider.scss
+++ b/sass/components/_image-slider.scss
@@ -1,31 +1,22 @@
-/* Clients Section
---------------------------------*/
-
-#clients {
+#image-slider {
     padding: 30px 0;
     margin-top: 30px;
     background-color: $primary;
     color: $web-white;
     h2 {
         color: $web-white;
-        margin-bottom: 30px;
     }
     img {
         max-width: 90%;
         opacity: 0.9;
-        border: 2px solid $secondary;
-        background-color: $web-white;
         transition: 0.3s;
-        border-top-right-radius: 15px;
-        border-bottom-left-radius: 15px;
         padding: 15px 0;
     }
     img:hover {
         opacity: 1;
-        border: 2px solid $secondary;
     }
     .owl-nav, .owl-dots {
-        margin-top: 20px;
+        margin-top: 5px;
         text-align: center;
     }
     .owl-dot {
@@ -38,8 +29,5 @@
     }
     .owl-dot.active {
         background-color: #50d8af;
-    }
-    p {
-        margin-bottom: 20px;
     }
 }
