--- a/sass/main-style.scss
+++ b/sass/main-style.scss
@@ -12,4 +12,17 @@
   'components/counter-details',
   'components/client-logo-slider',
   'components/footer',
-  'components/single';
+  'components/single',
+  'components/type-of-header',
+  'components/text-list',
+  'components/text-cta-box',
+  'components/image-text',
+  'components/column-wise-comonents',
+  'components/services',
+  'components/image-slider',
+  'components/three-column-components',
+  'components/contact-form',
+  'components/video-text.scss',
+  'components/count-down.scss',
+  'components/two-col-text-contact-form',
+  'components/four-column-components'; 
