--- a/sass/main-style.scss
+++ b/sass/main-style.scss
@@ -14,6 +14,7 @@
   'components/footer',
   'components/single',
   'components/type-of-header',
+  'components/menu-list',
   'components/text-list',
   'components/text-cta-box',
   'components/image-text',
